--- a/telas/vendedor-tela-login/novaSenhaDesktop.html
+++ b/telas/vendedor-tela-login/novaSenhaDesktop.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Componentes HTML & CSS</title>
+  <title>Nova Senha</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -14,140 +14,7 @@
   <link rel="stylesheet" href="../../toaki-componentes-css/css/icones.css">
   <link rel="stylesheet" href="../../toaki-componentes-css/css/inputs.css">
   <link rel="stylesheet" href="../../toaki-componentes-css/css/navbar.css">
-  <link rel="stylesheet" href="./css/style.css">
-
-  <style>
-    :root {
-    --raio-login: 30px;
-    --font-light: 300;
-    --font-Regular: 400;
-    --font-Medium: 500;
-    --font-SemiBold: 600;  
-    }
-
-    .navbar-tamanho{
-  width: 1348px;
-}
-
-
-.navbar-mobile {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: var(--espacamento-xg);
-  width: 100%;
-  padding-top: var(--espacamento-regular);
-  padding-bottom: var(--espacamento-regular);
-  background-color: var(--cor-fundo-secundaria);
-  box-shadow: var(--sombra-media);
-  border-radius: var(--raio-grande);
-}
-
-.navbar-3-icones {
-  gap: var(--espacamento-ggg);
-}
-
-.navbar-desktop {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: var(--espacamento-m);
-  background-color: var(--cor-fundo-secundaria);
-  box-shadow: var(--sombra-media);
-  border-radius: var(--raio-grande);
-}
-
-.navbar-desktop-imagem {
-  width: 60px;
-  height: 60px;
-}
-
-.navbar-desktop-imagem img {
-  width: 100%;
-  height: 100%;
-}
-
-.navbar-desktop-secao-vazia {
-  flex-grow: 1;
-}
-
-.navbar-desktop-icones {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: var(--espacamento-gg);
-}
-
-.icone-tamanho-g {
-  width: 32px;
-  height: 32px;
-}
-
-  .voltarPadding {
-    padding: 20px;
-  }
-  
-  .containerNovaSenha {
-  width: 100%;
-  max-width: 600px;              /* largura semelhante ao padrão do login */
-  margin: 5% auto;             /* centraliza vertical e horizontal */
-  padding: 24px;               /* respiro interno */
-  background: var(--cor-branco-translucido);
-  border-radius: 30px;         /* igual ao seu padrão */
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.10);
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;                   /* espaço interno entre os elementos */
-  }
-
-  .containerNovaSenha h2{
-    text-align: center;
-    font-size: 48px;
-    color: #000000ba;
-    font-family: "Montserrat", sans-serif;
-    font-weight: var(--font-SemiBold)
-  }
-
-  .containerNovaSenha form {
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    color: #000000ba;
-  }
-
-  .containerNovaSenha .botaoCentralizado {
-    text-align: center;
-  }
-
-  @media (max-width: 1024px) {
-    .containerCriarConta {
-      max-width: 55%;
-    }
-  }
-
-  @media (max-width: 768px) {
-    .containerCriarConta {
-      max-width: 80%;
-      padding: 18px;
-    }
-  }
-
-  @media (max-width: 480px) {
-    .containerCriarConta {
-      max-width: 92%;
-      padding: 15px;
-    }
-  }
-
-
-
-
-
-  </style>
-  
- 
+  <link rel="stylesheet" href="../vendedor-tela-login/css/novaSenhaDesktop.css">
 </head>
 
 <body>
