feat: finalizado div itens e ordenador-selct

--- a/telas/vendedor-produtos/vendedor-produtos-desktop.html
+++ b/telas/vendedor-produtos/vendedor-produtos-desktop.html
@@ -82,6 +82,14 @@
                     <path stroke-linecap="round" stroke-linejoin="round"></path>
                   </svg>
                 </div>
+                <div class="custom-select-container">
+                  <select class="texto-entrada-absoluto">
+                    <option value="" disabled selected>Ordenado por:</option>
+                    <option value="opcao1">NOME</option>
+                    
+                  </select>
+                </div>
+                
               </div>
               <div class="container-produtos">
                 <div class="item">
