feat: largura correta do título do chat e do espaço para digitar a mensagem

--- a/telas/cliente-editar-perfil/ajuda-suporte.html
+++ b/telas/cliente-editar-perfil/ajuda-suporte.html
@@ -76,7 +76,7 @@
                                     </svg>
                                 </div>
 
-                                <span class="titulo-chat">chatbot</span>
+                                <span class="titulo-chat">ChatBot</span>
                             </header>
 
                             <div class="chat-mensagens"></div>
