Titulo da página atualizado

--- a/telas/cliente-editar-perfil/editar-perfil.html
+++ b/telas/cliente-editar-perfil/editar-perfil.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/alterar-dados-perfil.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insira o nome da tela aqui</title>
+  <title>Editar perfil</title>
 </head>
 <body>
     <div class="resolucao">
