--- a/telas/cliente-editar-perfil/ajuda-suporte.html
+++ b/telas/cliente-editar-perfil/ajuda-suporte.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/ajuda-suporte.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insira o nome da tela aqui</title>
+  <title>Ajuda e Suporte</title>
 </head>
 <body>
     <div class="resolucao">
