--- a/telas/cliente-editar-perfil/menu-perfil.html
+++ b/telas/cliente-editar-perfil/menu-perfil.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./css/menu-perfil.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Insira o nome da tela aqui</title>
+  <title>Perfil</title>
 </head>
 <body>  
     <div class="resolucao">
